Excercise data added with improved functionality, including avoiding duplicates

--- a/index.html
+++ b/index.html
@@ -36,36 +36,36 @@
                 <h2>Push</h2>
                 <div class="line exc-line"></div>
 
-                <div id="chest-cont" class="excercise-cont">
-                    <h3 id="chest-text" class="random-text"></h3>
-                    <a><button id="chest-info" class="info-btn push-info-btn">i</button></a>
-                    <button id="chest" class="random-btn push-rndm-btn">R</button>
+                <div id="shoulders-cont" class="excercise-cont">
+                    <h3 id="shoulders-text" class="random-text"></h3>
+                    <a><button id="shoulders-info" class="info-btn push-info-btn">i</button></a>
+                    <button id="shoulders" class="random-btn push-rndm-btn">R</button>
                 </div>
                 <div id="triceps-cont" class="excercise-cont">
                     <h3 id="triceps-text" class="random-text"></h3>
                     <a><button id="triceps-info" class="info-btn push-info-btn">i</button></a>
                     <button id="triceps" class="random-btn push-rndm-btn">R</button>
                 </div>
-                <div id="shoulders-cont" class="excercise-cont">
-                    <h3 id="shoulders-text" class="random-text"></h3>
-                    <a><button id="triceps-info" class="info-btn push-info-btn">i</button></a>
-                    <button id="shoulders" class="random-btn push-rndm-btn">R</button>
-                </div>
-
-                <div id="chest-cont" class="excercise-cont new-conts conts-1">
+                <div id="chest-cont" class="excercise-cont">
                     <h3 id="chest-text" class="random-text"></h3>
                     <a><button id="chest-info" class="info-btn push-info-btn">i</button></a>
                     <button id="chest" class="random-btn push-rndm-btn">R</button>
+                </div>
+
+                <div id="shoulders-cont" class="excercise-cont new-conts conts-3">
+                    <h3 id="shoulders-text" class="random-text"></h3>
+                    <a><button id="shoulders-info" class="info-btn push-info-btn">i</button></a>
+                    <button id="shoulders" class="random-btn push-rndm-btn">R</button>
                 </div>
                 <div id="triceps-cont" class="excercise-cont new-conts conts-2">
                     <h3 id="triceps-text" class="random-text"></h3>
                     <a><button id="triceps-info" class="info-btn push-info-btn">i</button></a>
                     <button id="triceps" class="random-btn push-rndm-btn">R</button>
                 </div>
-                <div id="shoulders-cont" class="excercise-cont new-conts conts-3">
-                    <h3 id="shoulders-text" class="random-text"></h3>
-                    <a><button id="triceps-info" class="info-btn push-info-btn">i</button></a>
-                    <button id="shoulders" class="random-btn push-rndm-btn">R</button>
+                <div id="chest-cont" class="excercise-cont new-conts conts-1">
+                    <h3 id="chest-text" class="random-text"></h3>
+                    <a><button id="chest-info" class="info-btn push-info-btn">i</button></a>
+                    <button id="chest" class="random-btn push-rndm-btn">R</button>
                 </div>
 
                 <div id="all">
@@ -134,11 +134,6 @@
                     <button id="back" class="random-btn pull-rndm-btn">R</button>
                 </div>
 
-                <div id="back-cont" class="excercise-cont new-conts conts-1">
-                    <h3 id="back-text" class="random-text"></h3>
-                    <a><button id="back-info" class="info-btn pull-info-btn">i</button></a>
-                    <button id="back" class="random-btn pull-rndm-btn">R</button>
-                </div>
                 <div id="biceps-cont" class="excercise-cont new-conts conts-2">
                     <h3 id="biceps-text" class="random-text"></h3>
                     <a><button id="biceps-info" class="info-btn pull-info-btn">i</button></a>
@@ -148,6 +143,11 @@
                     <h3 id="back-text" class="random-text"></h3>
                     <a><button id="back-info" class="info-btn pull-info-btn">i</button></a>
                     <button id="back" class="random-btn pull-rndm-btn">R</button>
+                </div>
+                <div id="biceps-cont" class="excercise-cont new-conts conts-2">
+                    <h3 id="biceps-text" class="random-text"></h3>
+                    <a><button id="biceps-info" class="info-btn pull-info-btn">i</button></a>
+                    <button id="biceps" class="random-btn pull-rndm-btn">R</button>
                 </div>
 
                 <div id="all">
